--- a/index.html
+++ b/index.html
@@ -29,17 +29,16 @@
             <br>
             <h4 class = "WhiteFont" align="center">"
                 <font face="Comic Sans MS">
-                    <i>Being challenged in life is inevitable,
-                        being defeated is optional."</i>
-                    <br>-Roger Crawford
+                    <i>“A year spent in artificial intelligence is enough to make one believe in God.”</i>
+                    <br>-Alan Perlis
                 </font>
             </h4>
             <br>
-            <h4 class = "WhiteFont" align="center">Hello, I am</h4>
+            <h4 class = "WhiteFont" align="center">Welcome to</h4>
             <h1 class="header-title " align="center">
-                Mohammad Ali
+                Robust and Interpretable Machine Learning (RIML) Lab
             </h1>
-            <h6 class = "WhiteFont" align="center">BS student, Computer Science</h6>
+            <h6 class = "WhiteFont" align="center">Sharif University of Technology</h6>
             <br>
             <br>
         </div>
@@ -64,7 +63,7 @@
 
             <!--Image-->
             <ul class="navbar-nav brand">
-                <img src="assets/imgs/Ali.jpg" alt="" class="brand-img">
+                <img src="assets/imgs/riml_logo.png" alt="" class="brand-img">
                 <li class="brand-txt">
                     <h5 class="brand-title">Mohammadali Banayeeanzade</h5>
                     <div class="brand-subtitle">Computer science</div>
