--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                 </font>
             </h4>
             <br>
-            <h4 class = "WhiteFont" align="center">Welcome to</h4>
-            <h1 class="header-title " align="center">
+            <!-- <h4 class = "WhiteFont" align="center">Welcome to</h4> -->
+            <h2 class="header-title " align="center">
                 Robust and Interpretable Machine Learning (RIML) Lab
-            </h1>
-            <h6 class = "WhiteFont" align="center">Sharif University of Technology</h6>
+            </h2>
+            <h4 class = "WhiteFont" align="center">Sharif University of Technology</h4>
             <br>
             <br>
         </div>
