--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                 </font>
             </h4>
             <br>
-            <!-- <h4 class = "WhiteFont" align="center">Welcome to</h4> -->
+            <h4 class = "WhiteFont" align="center">Robust and Interpretable Machine Learning</h4>
             <h2 class="header-title " align="center">
-                Robust and Interpretable Machine Learning (RIML) Lab
+                RIML Lab
             </h2>
             <h4 class = "WhiteFont" align="center">Sharif University of Technology</h4>
             <br>
