--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <br>
             <h4 class = "WhiteFont" align="center">"
                 <font face="Comic Sans MS">
-                    <i>“A year spent in artificial intelligence is enough to make one believe in God.”</i>
+                    <i>A year spent in artificial intelligence is enough to make one believe in God."</i>
                     <br>-Alan Perlis
                 </font>
             </h4>
@@ -57,7 +57,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a href="#resume" class="nav-link">Resume</a>
+                    <a href="#people" class="nav-link">People</a>
                 </li>
             </ul>
 
@@ -150,10 +150,10 @@
     </div>
 </section>
 
-<!-- Resume Section-->
-<section class="section" id="resume">
+<!-- People Section-->
+<section class="section" id="people">
     <div class="container">
-        <h2 class="mb-5"><span class="text-danger">My</span> Resume</h2>
+        <h2 class="mb-5"><span class="text-danger">My</span> People </h2>
         <div class="row">
             <div class="col-md-6 col-lg-4">
                 <div class="card">
