--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 <!-- People Section-->
 <section class="section" id="people">
     <div class="container">
-        <h2 class="mb-5"><span class="text-danger">My</span> People </h2>
+        <h2 class="mb-5"> People </h2>
         <div class="row">
             <div class="col-md-6 col-lg-4">
                 <div class="card">
