--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <!--Right nav-->
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a href="#honorsAndAwards" class="nav-link">Honors and Awards</a>
+                    <a href="#projects" class="nav-link">Projects</a>
                 </li>
                 <li class="nav-item last-item">
                     <a href="#contact" class="nav-link">Contact</a>
@@ -243,9 +243,9 @@
     </div>
 </section>
 
-<!-- Honors and Awards -->
-<section class="section bg-dark text-center" id = "honorsAndAwards">
-    <h2 class="mb-5"> <span class="HonorsColor">Honors</span> <span class="text-danger">&</span> <span class="HonorsColor">Awards</span></h2>
+<!-- Projects -->
+<section class="section bg-dark text-center" id = "projects">
+    <h2 class="mb-5"> <span class="HonorsColor">Projects</span> </h2>
     <p>
 
     <li class="social-link">
