--- a/index.html
+++ b/index.html
@@ -99,60 +99,34 @@
     <div class="container-fluid">
         <div class="row about-section">
             <div class="col-lg-4 about-card">
-                <h3 class="font-weight-light">Who am I ?</h3>
+                <h3 class="font-weight-light">What is RIML Lab?</h3>
                 <span class="line mb-5"></span>
-                <h5 class="mb-3">Mohammadali Banayeeanzade, BS, Computer science.</h5>
+                <h5 class="mb-3">Main Point</h5>
                 <p>
-                    I am Mohammadali Banayeeanzade. Currently, I am studying at Sharif University of Technology, Tehran, Iran at second year. I am studying at computer science
-                    and interested in <i>Machine Learning</i> and <i>Deep Learning</i>.
+                    Description
                 </p>
                 <!--                <button class="btn btn-outline-danger" onclick="window.location.href='https://w3docs.com';"><i class="icon-down-circled2 "></i>Download My CV</button>-->
             </div>
 
             <div class="col-lg-4 about-card">
-                <h3 class="font-weight-light">Personal Info</h3>
+                <h3 class="font-weight-light">RIML Strategic Plan</h3>
                 <span class="line mb-5"></span>
-                <ul class="mt40 info list-unstyled">
-                    <li><span>Birthdate</span> : 01/31/2004</li>
-                    <li><span>Email</span> : a.banayeean@gmail.com</li>
-                    <li><span>Phone</span> : + (98) 9027985542</li>
-                    <li><span>Telegram</span> : @alibana82 </li>
-                </ul>
+                <h5 class="mb-3">Main Point</h5>
+                <p>
+                    Description
+                </p>
             </div>
 
             <div class="col-lg-4 about-card">
-                <h3 class="font-weight-light">Hobbies</h3>
+                <h3 class="font-weight-light">Contact Info</h3>
                 <span class="line mb-5"></span>
-                <div class="row">
-                    <div class="col-1 text-danger pt-1"><i class="fa fa-soccer-ball-o"></i></div>
-                    <div class="col-10 ml-auto mr-3">
-                        <h6>Soccer</h6>
-                        <hr>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-1 text-danger pt-1"><i class='ti-game'></i></div>
-                    <div class="col-10 ml-auto mr-3">
-                        <h6>Video game</h6>
-                        <hr>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-1 text-danger pt-1"><i class="ti-book"></i></div>
-                    <div class="col-10 ml-auto mr-3">
-                        <h6>Reading</h6>
-                        <hr>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-1 text-danger pt-1"><i class='fa fa-paint-brush'></i></div>
-                    <div class="col-10 ml-auto mr-3">
-                        <h6>Painting</h6>
-                        <hr>
-                    </div>
-                </div>
-
+                <ul class="mt40 info list-unstyled">
+                    <li><span>Email</span> : ...</li>
+                    <li><span>GitHub</span> : ...</li>
+                    <li><span>LinkedIn</span> : ...</li>
+                    <li><span>Phone</span> : ...</li>
+                    <li><span>Telegram Channel</span> : ...</li>
+                </ul>
             </div>
 
         </div>
