--- a/index.html
+++ b/index.html
@@ -138,22 +138,39 @@
     <div class="container">
         <h2 class="mb-5"> People </h2>
         <div class="row">
-          
+
             <div class="col-md-6 col-lg-4">
                 <div class="card">
                     <div class="card-header">
                         <div class="mt-2">
-                            <h4>Education</h4>
+                            <h4>Dr. Mohammad Hossein Rohban</h4>
                             <span class="line"></span>
                         </div>
                     </div>
                     <div class="card-body">
-                        <h6 class="title text-danger">2021 - Present</h6>
-                        <P>BC Computer Science</P>
-                        <P class="subtitle">Studying at BC Computer Science From 2021.</P>
-                        <hr>
-                        <h6 class="title text-danger">GPA</h6>
-                        <P class="subtitle">Get GPA. <b> 19.73 </b> out of <b> 20 </b> </P>
+                        <h6 class="title text-danger">Assistant Professor (2018-)</h6>
+                        <P>Email: ...</P>
+                        <P>Google Scholar: ...</P>
+                        <P>GitHub: ...</P>
+                        <P>LinkedIn: ...</P>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6 col-lg-4">
+                <div class="card">
+                    <div class="card-header">
+                        <div class="mt-2">
+                            <h4>Zeinab Golgooni</h4>
+                            <span class="line"></span>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <h6 class="title text-danger">PhD Student (2021-)</h6>
+                        <P>Email: ...</P>
+                        <P>Google Scholar: ...</P>
+                        <P>GitHub: ...</P>
+                        <P>LinkedIn: ...</P>
                     </div>
                 </div>
             </div>
