--- a/index.html
+++ b/index.html
@@ -188,124 +188,42 @@
                 <div class="card">
                     <div class="card-header">
                         <div class="mt-2">
-                            <h4>Education</h4>
+                            <h4>Artificial intelligence</h4>
                             <span class="line"></span>
                         </div>
                     </div>
                     <div class="card-body">
-                        <h6 class="title text-danger">2021 - Present</h6>
-                        <P>BC Computer Science</P>
-                        <P class="subtitle">Studying at BC Computer Science From 2021.</P>
-                        <hr>
-                        <h6 class="title text-danger">GPA</h6>
-                        <P class="subtitle">Get GPA. <b> 19.73 </b> out of <b> 20 </b> </P>
+                        <h6 class="title text-danger">Fall 2023</h6>
+                        <P>Website: ...</P>
                     </div>
                 </div>
             </div>
 
-            <!--Skills-->
-            <div class="col-lg-4">
-                <div class="card">
-                    <div class="card-header">
-                        <div class="pull-left">
-                            <h4 class="mt-2">Skills</h4>
-                            <span class="line"></span>
-                        </div>
-                    </div>
-                    <div class="card-body pb-2">
-                        <h6>Java &amp; R & C</h6>
-                        <div class="progress mb-3">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <h6>Microsoft office & Latex</h6>
-                        <div class="progress mb-3">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 90%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <h6>Github</h6>
-                        <div class="progress mb-3">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 85%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <h6>Python</h6>
-                        <div class="progress mb-3">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 80%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <h6>Linux</h6>
-                        <div class="progress mb-3">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 70%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <h6>C++</h6>
-                        <div class="progress mb-3">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 60%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <h6>PHP & JavaScript</h6>
-                        <div class="progress mb-3">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 60%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <h6>SQL</h6>
-                        <div class="progress mb-3">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 50%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <h6>Adobe Photoshop</h6>
-                        <div class="progress mb-3">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 40%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="card">
-                    <div class="card-header">
-                        <div class="pull-left">
-                            <h4 class="mt-2">Languages</h4>
-                            <span class="line"></span>
-                        </div>
-                    </div>
-                    <div class="card-body pb-2">
-                        <h6>English</h6>
-                        <div class="progress mb-3">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 </section>
 
 <!-- Projects -->
-<section class="section bg-dark text-center" id = "projects">
-    <h2 class="mb-5"> <span class="HonorsColor">Projects</span> </h2>
-    <p>
+<section class="section" id="projects">
+    <div class="container">
+        <h2 class="mb-5"> Projects </h2>
+        <div class="row">
+            <div class="col-md-6 col-lg-4">
+                <div class="card">
+                    <div class="card-header">
+                        <div class="mt-2">
+                            <h4>Visual Compositional Generation</h4>
+                            <span class="line"></span>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <P>Description</P>
+                    </div>
+                </div>
+            </div>
 
-    <li class="social-link">
-        <i class='ti-medall' style='font-size:30px;color: #F85C70'></i>
-        <font color="white" size="4">&nbsp <b>Rank in department </b></font>
-    </li>
-
-    </p>
-
-    <p>
-
-    <p>
-        <font color="white" size="3"> Ranked top three in Sharif University of Technology
-            computer science field, out of more than 100 students </font>
-
-    </p>
-
-
-    <li class="social-link">
-        <i class='fa fa-trophy' style='font-size:30px;color: #F85C70'></i>
-        <font color="white" size="4">&nbsp <b>BS's Entrance Exam </b></font>
-    </li>
-
-    </p>
-
-
-    <p>
-        <font color="white" size="3"> Ranked 114'th in The Annual National Iranian Matriculation Exams out of &nbsp >200,000 participants
-        </font>
-
-    </p>
+        </div>
+    </div>
 </section>
 
 
