--- a/index.html
+++ b/index.html
@@ -222,6 +222,34 @@
                 </div>
             </div>
 
+            <div class="col-md-6 col-lg-4">
+                <div class="card">
+                    <div class="card-header">
+                        <div class="mt-2">
+                            <h4>Spurious Correlation</h4>
+                            <span class="line"></span>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <P>Description</P>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6 col-lg-4">
+                <div class="card">
+                    <div class="card-header">
+                        <div class="mt-2">
+                            <h4>Anomaly Detection</h4>
+                            <span class="line"></span>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <P>Description</P>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 </section>
@@ -232,90 +260,24 @@
     <div class="container">
         <h2 class="mb-5"> Publications </h2>
         <div class="row">
+
+
             <div class="col-md-6 col-lg-4">
                 <div class="card">
                     <div class="card-header">
                         <div class="mt-2">
-                            <h4>Education</h4>
+                            <h4>ZeroGrad: Costless conscious remedies for catastrophic overfitting in the FGSM adversarial training</h4>
                             <span class="line"></span>
                         </div>
                     </div>
                     <div class="card-body">
-                        <h6 class="title text-danger">2021 - Present</h6>
-                        <P>BC Computer Science</P>
-                        <P class="subtitle">Studying at BC Computer Science From 2021.</P>
-                        <hr>
-                        <h6 class="title text-danger">GPA</h6>
-                        <P class="subtitle">Get GPA. <b> 19.73 </b> out of <b> 20 </b> </P>
+                        <h6 class="title text-danger">Intelligent Systems with Applications - 2023</h6>
+                        <P>Description</P>
                     </div>
                 </div>
             </div>
 
-            <!--Skills-->
-            <div class="col-lg-4">
-                <div class="card">
-                    <div class="card-header">
-                        <div class="pull-left">
-                            <h4 class="mt-2">Skills</h4>
-                            <span class="line"></span>
-                        </div>
-                    </div>
-                    <div class="card-body pb-2">
-                        <h6>Java &amp; R & C</h6>
-                        <div class="progress mb-3">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <h6>Microsoft office & Latex</h6>
-                        <div class="progress mb-3">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 90%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <h6>Github</h6>
-                        <div class="progress mb-3">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 85%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <h6>Python</h6>
-                        <div class="progress mb-3">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 80%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <h6>Linux</h6>
-                        <div class="progress mb-3">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 70%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <h6>C++</h6>
-                        <div class="progress mb-3">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 60%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <h6>PHP & JavaScript</h6>
-                        <div class="progress mb-3">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 60%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <h6>SQL</h6>
-                        <div class="progress mb-3">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 50%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <h6>Adobe Photoshop</h6>
-                        <div class="progress mb-3">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 40%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="card">
-                    <div class="card-header">
-                        <div class="pull-left">
-                            <h4 class="mt-2">Languages</h4>
-                            <span class="line"></span>
-                        </div>
-                    </div>
-                    <div class="card-body pb-2">
-                        <h6>English</h6>
-                        <div class="progress mb-3">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+
         </div>
     </div>
 </section>
