--- a/index.html
+++ b/index.html
@@ -272,7 +272,9 @@
                     </div>
                     <div class="card-body">
                         <h6 class="title text-danger">Intelligent Systems with Applications - 2023</h6>
+                        <P>Autors</P>
                         <P>Description</P>
+                        <P>Link</P>
                     </div>
                 </div>
             </div>
