--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         <div class="row">
 
 
-            <div class="col-md-6 col-lg-4">
+            <div class="col">
                 <div class="card">
                     <div class="card-header">
                         <div class="mt-2">
