--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     <div class="container">
         <h2 class="mb-5"> Projects </h2>
         <div class="row">
-            <div class="col-md-6 col-lg-4">
+            <div class="col">
                 <div class="card">
                     <div class="card-header">
                         <div class="mt-2">
@@ -221,8 +221,10 @@
                     </div>
                 </div>
             </div>
+        </div>
 
-            <div class="col-md-6 col-lg-4">
+        <div class="row">
+            <div class="col">
                 <div class="card">
                     <div class="card-header">
                         <div class="mt-2">
@@ -235,8 +237,10 @@
                     </div>
                 </div>
             </div>
+        </div>
 
-            <div class="col-md-6 col-lg-4">
+        <div class="row">
+            <div class="col">
                 <div class="card">
                     <div class="card-header">
                         <div class="mt-2">
@@ -249,8 +253,8 @@
                     </div>
                 </div>
             </div>
-
         </div>
+
     </div>
 </section>
 
