--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Start your development with JohnDoe landing page.">
     <meta name="author" content="Devcrud">
 
-    <title>Ali's Homepage</title>
+    <title>RILM Lab Homepage</title>
     <!--  CSS  -->
 
     <!-- font icons -->
@@ -322,10 +322,10 @@
     <div class="container">
         <p class="text-danger">Feel free to leave me a message ...</p>
         <ul class="social-icons pt-3">
-            <li class="social-item"><a class="social-link" href="mailto:a.banayeean@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
-            <li class="social-item"><a class="social-link" href="https://t.me/alibana82"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
-            <li class="social-item"><a class="social-link" href="https://github.com/Alibanayeean/"><i class="fa fa-github" aria-hidden="false"></i></a></li>
-            <li class="social-item"><a class="social-link" href="https://stackoverflow.com/"><i class="fa fa-stack-overflow" aria-hidden="false"></i></a></li>
+            <li class="social-item"><a class="social-link" href="https://google.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+            <li class="social-item"><a class="social-link" href="https://google.com"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
+            <li class="social-item"><a class="social-link" href="https://google.com"><i class="fa fa-github" aria-hidden="false"></i></a></li>
+            <li class="social-item"><a class="social-link" href="https://google.com"><i class="fa fa-stack-overflow" aria-hidden="false"></i></a></li>
         </ul>
     </div>
 </footer>
