--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                                 <textarea id = "TextField" class="form-control" id=" placeholder=" Message  rows="7" required></textarea>
                             </div>
                             <div class="form-group ">
-                                <button onclick="clickSendButton()" id="buttonForSubmitSendMessage" type="submit" class="form-control btn btn-primary" href="mailto:a.banayeean@gmail.com">Send Message</button>
+                                <button onclick="clickSendButton()" id="buttonForSubmitSendMessage" type="submit" class="form-control btn btn-primary" href="google.com">Send Message</button>
                             </div>
                         </form>
                     </div>
