--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
                 </li>
 
                 <li class="nav-item">
+                    <a href="#open_positions" class="nav-link">Open Positions</a>
+                </li>
+
+                <li class="nav-item">
                     <a href="#publications" class="nav-link">Publications</a>
                 </li>
 
@@ -250,6 +254,30 @@
                     </div>
                     <div class="card-body">
                         <P>Description</P>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</section>
+
+
+<!-- Open Positions -->
+<section class="section" id="open_positions">
+    <div class="container">
+        <h2 class="mb-5"> Open Positions </h2>
+        <div class="row">
+            <div class="col">
+                <div class="card">
+                    <div class="card-header">
+                        <div class="mt-2">
+                            <h4>Spurious Correlation</h4>
+                            <span class="line"></span>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <P>Requirements: ...</P>
                     </div>
                 </div>
             </div>
