--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
                 </li>
 
                 <li class="nav-item">
-                    <a href="#open_positions" class="nav-link">Open Positions</a>
+                    <a href="#open_positions" class="nav-link">Open</a>
+                    <a href="#open_positions" class="nav-link">Positions</a>
                 </li>
 
                 <li class="nav-item">
