--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
                 <li class="nav-item">
                     <a href="#courses" class="nav-link">Courses</a>
                 </li>
+
+                <li class="nav-item">
+                    <a href="#projects" class="nav-link">Projects</a>
+                </li>
             </ul>
 
             <!--Image-->
@@ -76,13 +80,9 @@
 
             <!--Right nav-->
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a href="#projects" class="nav-link">Projects</a>
-                </li>
 
                 <li class="nav-item">
-                    <a href="#open_positions" class="nav-link">Open</a>
-                    <a href="#open_positions" class="nav-link">Positions</a>
+                    <a href="#open_positions" class="nav-link">Open Positions</a>
                 </li>
 
                 <li class="nav-item">
